--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_USERNAME=postgres
-DB_PASSWORD=postgre
-DB_DATABASE=postgres
-DB_HOST=localhost
-DB_PORT=5432
+DB_PASSWORD=123qwe123
+DB_DATABASE=advisory
+DB_HOST=db
+DB_PORT=42121
